--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <title>聊天室 Chat Room</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P2KRJ0M3DP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P2KRJ0M3DP');
+</script>
 <body>
     <div class="content">{%block content%} {%endblock%}</div>
     
