--- a/templates/home.html
+++ b/templates/home.html
@@ -22,8 +22,8 @@
 
 <div class="disclaimer">Disclaimer: The owner of this website is not responsible for the actions, behavior, or content exchanged by users within the chat 
     room. The website is provided as a platform for communication and interaction, and the owner does not assume any liability for the 
-    accuracy, completeness, or appropriateness of the discussions held within. Users are solely responsible for their own conduct and the info
-    rmation they choose to share. The owner of this website disclaims any responsibility for any harm, loss, or damages that may arise from the use of 
+    accuracy, completeness, or appropriateness of the discussions held within. Users are solely responsible for their own conduct and the 
+    information they choose to share. The owner of this website disclaims any responsibility for any harm, loss, or damages that may arise from the use of 
     this website. By using this website, you acknowledge and agree to this disclaimer and our <a style="color: white" href="https://www.privacypolicies.com/live/9379fa8f-f7d6-458c-9638-81c43493e268">privacy policy</a>.</div>
 </div>
 
