--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
     information they choose to share. The owner of this website disclaims any responsibility for any harm, loss, or damages that may arise from the use of 
     this website. By using this website, you acknowledge and agree to this disclaimer and our <a style="color: white" href="https://www.privacypolicies.com/live/9379fa8f-f7d6-458c-9638-81c43493e268">privacy policy</a>.
     It is your responsibility to review and understand our privacy policy before accessing or using any services or features of this website. If you do not agree with the terms outlined in the privacy policy, 
-    please refrain from using this website
+    please refrain from using this website.
 </div>
 </div>
 
