--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,13 @@
     <title>聊天室 Chat Room</title>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P2KRJ0M3DP"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-94D3EKYWSC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-P2KRJ0M3DP');
+  gtag('config', 'G-94D3EKYWSC');
 </script>
 <body>
     <div class="content">{%block content%} {%endblock%}</div>
